Set up first page and stylesheet

--- a/mysite.html
+++ b/mysite.html
@@ -8,5 +8,9 @@
 <body>
 
 <p>Learning about version control</p>
+<ol>This is my list</ol>
+    <li>Cereal</li>
+    <li>pasta</li>
+    <li>bread</li>
 </body>
 </html>
